- Deletions are delayed for one hour and can be cancelled by changing the status
  back to ``VISIBLE``.
- Membership permissions have been overhauled and have been flattened into a single tiered
  role. Additionally owners will no longer be automatically added to new teams.
- ``NotificationPlugin`` now requires ``is_configured`` to be declared.

Client API
~~~~~~~~~~

- The ``culprit`` attribute will now automatically be filled when not present.
- The ``in_app`` attribute on frames will now be computed on event submission when not present.
- The ``ip_address`` value will always be stored on the user interface when possible.
- The user interface no longer accepts data missing one of the required identifiers.
- The ``fingerprint`` value is now stored in ``Event.data``.

Schema Changes
~~~~~~~~~~~~~~

- Removed the ``Project.platform`` column.
- Removed the ``Project.organization`` column.
- Removed the ``AccessGroup`` table.
- Added ``EventUser`` table.
- Added ``user.{attribute}`` to search backends.
- Added ``Project.first_event`` column.
- Added ``Release.owner`` column.
- Added ``Organization.default_role`` column.
- Added ``OrganizationMember.role`` column.

Version 7.7.1
-------------

- Pin Kombu dependency due to incompatibility.

Version 7.7.0
-------------

- The behavior of ``create_or_update`` has changed. If you're using it please see the updated function.
- Added ``Group.first_release`` column.
- Added ``SavedSearch`` model for future features.
- Added ``Release.new_groups`` column.
- The explore feature is now deprecated and links have been hidden.
- Expanded various API endpoints for future usage.
- Initial prototype of embeddable crash reports. This adds the ``UserReport`` model.
- Added basic UI reporting for status checks.
- Added celery/beat alive check.
- Added celery app version check.
- Added queue overview to internal administration.
- Upped TSDB's storage of 10s to 60m of data.
- Added protocol version 7 to client spec.